--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
-<!DOCTYPE html><!--  Last Published: Wed Dec 17 2025 16:07:47 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Thu Dec 18 2025 12:05:23 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="69342031af17f8cbbfc79103" data-wf-site="6934202faf17f8cbbfc79092" lang="fi">
 <head>
   <meta charset="utf-8">
-  <title>Nords Oy</title>
+  <title>Nords Oy – Me teemme sivut, jotka tukevat kasvua</title>
+  <meta content="Nords on kotimainen digitoimisto, joka suunnittelee verkkosivut, logot, yritysilmeet ja chatbotit – näyttävästi, selkeästi ja liiketoimintaa tukien." name="description">
+  <meta content="Nords Oy – Me teemme sivut, jotka tukevat kasvua" property="og:title">
+  <meta content="Nords on kotimainen digitoimisto, joka suunnittelee verkkosivut, logot, yritysilmeet ja chatbotit – näyttävästi, selkeästi ja liiketoimintaa tukien." property="og:description">
+  <meta content="Nords Oy – Me teemme sivut, jotka tukevat kasvua" property="twitter:title">
+  <meta content="Nords on kotimainen digitoimisto, joka suunnittelee verkkosivut, logot, yritysilmeet ja chatbotit – näyttävästi, selkeästi ja liiketoimintaa tukien." property="twitter:description">
+  <meta property="og:type" content="website">
+  <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/components.css" rel="stylesheet" type="text/css">
@@ -1579,6 +1586,30 @@
                 <div data-delay="4000" data-animation="slide" class="slider-testimonials w-slider" data-autoplay="true" data-easing="ease" data-hide-arrows="false" data-disable-swipe="false" data-autoplay-limit="0" data-nav-spacing="3" data-duration="500" data-infinite="true" id="sliderId">
                   <div class="mask w-slider-mask">
                     <div data-w-id="4a5ea4a0-b96c-a1a9-78c9-4196321dcf6a" class="slide-1 w-slide">
+                      <div data-wf--testimonial---global--variant="primary" class="testimonial__component">
+                        <div class="testimonial__wrap">
+                          <div class="testimonial__content">
+                            <div class="testimonial__quote">
+                              <p class="display-body--lg">&quot;Todella iso suositus. Nopea valmistuminen ja lopputulokseen erittäin tyytyväinen.&quot;</p>
+                            </div>
+                          </div>
+                          <div class="testimonial__avatar">
+                            <div data-wf--avatar---global--variant="primary" class="avatar__component">
+                              <div id="w-node-eff9879d-5adb-a1e9-3bab-e88007b9e947-18249e5a" class="avatar__divider"></div>
+                              <div id="w-node-_6bde758c-1e0a-d88a-4200-63c318249e5d-18249e5a" class="avatar__content">
+                                <div class="avatar__name">
+                                  <div class="text-color-inherit">Janne Viljanen</div>
+                                </div>
+                                <div id="w-node-_6bde758c-1e0a-d88a-4200-63c318249e61-18249e5a" class="avatar__company">
+                                  <div class="text-color-inherit">Rakennuspalvelu Viljanen Oy</div>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div data-w-id="f672963e-d8c4-7535-38c2-4967fbf92f01" class="slide-1 w-slide">
                       <div data-wf--testimonial---global--variant="primary" class="testimonial__component">
                         <div class="testimonial__wrap">
                           <div class="testimonial__content">
