--- a/kysely.html
+++ b/kysely.html
@@ -1,10 +1,15 @@
-<!DOCTYPE html><!--  Last Published: Wed Dec 17 2025 16:07:47 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Thu Dec 18 2025 12:05:23 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="69411fb0954c65393233845d" data-wf-site="6934202faf17f8cbbfc79092" lang="fi">
 <head>
   <meta charset="utf-8">
-  <title>Kysely</title>
-  <meta content="Kysely" property="og:title">
-  <meta content="Kysely" property="twitter:title">
+  <title>Kysely – Nords Oy</title>
+  <meta content="Täytä tämä lomake antaaksesi meille tiedot, joita tarvitsemme kehittääksemme kotisivusi. Täytä lomake huolellisesti, ja aloitamme työn mahdollisimman pian!" name="description">
+  <meta content="Kysely – Nords Oy" property="og:title">
+  <meta content="Täytä tämä lomake antaaksesi meille tiedot, joita tarvitsemme kehittääksemme kotisivusi. Täytä lomake huolellisesti, ja aloitamme työn mahdollisimman pian!" property="og:description">
+  <meta content="Kysely – Nords Oy" property="twitter:title">
+  <meta content="Täytä tämä lomake antaaksesi meille tiedot, joita tarvitsemme kehittääksemme kotisivusi. Täytä lomake huolellisesti, ja aloitamme työn mahdollisimman pian!" property="twitter:description">
+  <meta property="og:type" content="website">
+  <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/components.css" rel="stylesheet" type="text/css">
