--- a/ota-yhteytta.html
+++ b/ota-yhteytta.html
@@ -1,10 +1,15 @@
-<!DOCTYPE html><!--  Last Published: Wed Dec 17 2025 16:07:47 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Thu Dec 18 2025 12:05:23 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="69342031af17f8cbbfc7923d" data-wf-site="6934202faf17f8cbbfc79092" lang="fi">
 <head>
   <meta charset="utf-8">
-  <title>Ota yhteyttä</title>
-  <meta content="Ota yhteyttä" property="og:title">
-  <meta content="Ota yhteyttä" property="twitter:title">
+  <title>Ota yhteyttä – Nords Oy</title>
+  <meta content="Tarvitsetko verkkosivut, logon tai muuta brändäystä? Ota yhteyttä, niin katsotaan yhdessä sopiva ratkaisu just sun yritykselle." name="description">
+  <meta content="Ota yhteyttä – Nords Oy" property="og:title">
+  <meta content="Tarvitsetko verkkosivut, logon tai muuta brändäystä? Ota yhteyttä, niin katsotaan yhdessä sopiva ratkaisu just sun yritykselle." property="og:description">
+  <meta content="Ota yhteyttä – Nords Oy" property="twitter:title">
+  <meta content="Tarvitsetko verkkosivut, logon tai muuta brändäystä? Ota yhteyttä, niin katsotaan yhdessä sopiva ratkaisu just sun yritykselle." property="twitter:description">
+  <meta property="og:type" content="website">
+  <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/components.css" rel="stylesheet" type="text/css">
