--- a/tyot.html
+++ b/tyot.html
@@ -1,8 +1,15 @@
-<!DOCTYPE html><!--  Last Published: Wed Dec 17 2025 16:07:47 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Thu Dec 18 2025 12:05:23 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="69342031af17f8cbbfc791d6" data-wf-site="6934202faf17f8cbbfc79092" lang="fi">
 <head>
   <meta charset="utf-8">
-  <title>Nords Oy</title>
+  <title>Työt – Nords Oy</title>
+  <meta content="Katso toteuttamiamme verkkosivuja, logoja ja bränditöitä. Asiakaskohtaisesti suunniteltuja ratkaisuja, jotka jäävät mieleen ja toimivat." name="description">
+  <meta content="Työt – Nords Oy" property="og:title">
+  <meta content="Katso toteuttamiamme verkkosivuja, logoja ja bränditöitä. Asiakaskohtaisesti suunniteltuja ratkaisuja, jotka jäävät mieleen ja toimivat." property="og:description">
+  <meta content="Työt – Nords Oy" property="twitter:title">
+  <meta content="Katso toteuttamiamme verkkosivuja, logoja ja bränditöitä. Asiakaskohtaisesti suunniteltuja ratkaisuja, jotka jäävät mieleen ja toimivat." property="twitter:description">
+  <meta property="og:type" content="website">
+  <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/components.css" rel="stylesheet" type="text/css">
