--- a/tietosuojaseloste.html
+++ b/tietosuojaseloste.html
@@ -1,10 +1,15 @@
-<!DOCTYPE html><!--  Last Published: Wed Dec 17 2025 16:07:47 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Thu Dec 18 2025 12:05:23 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="69342031af17f8cbbfc79215" data-wf-site="6934202faf17f8cbbfc79092" lang="fi">
 <head>
   <meta charset="utf-8">
-  <title>Nords Oy</title>
+  <title>Tietosuojaseloste – Nords Oy</title>
+  <meta content="Lue lisää tietosuojaselosteestamme saadaksesi selkeän kuvan siitä, miten huolehdimme tietosuojastasi ja mitä oikeuksia sinulla on henkilötietojesi suhteen." name="description">
+  <meta content="Tietosuojaseloste – Nords Oy" property="og:title">
   <meta content="Sensa is a modern Webflow template built for SaaS startups, digital products, and tech services. Fully responsive, CMS-powered, and optimized for performance and SEO. Design by StaticMotion." property="og:description">
+  <meta content="Tietosuojaseloste – Nords Oy" property="twitter:title">
   <meta content="Sensa is a modern Webflow template built for SaaS startups, digital products, and tech services. Fully responsive, CMS-powered, and optimized for performance and SEO. Design by StaticMotion." property="twitter:description">
+  <meta property="og:type" content="website">
+  <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/components.css" rel="stylesheet" type="text/css">
