--- a/tiimi.html
+++ b/tiimi.html
@@ -1,10 +1,15 @@
-<!DOCTYPE html><!--  Last Published: Wed Dec 17 2025 16:07:47 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Thu Dec 18 2025 12:05:23 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="69342031af17f8cbbfc791d7" data-wf-site="6934202faf17f8cbbfc79092" lang="fi">
 <head>
   <meta charset="utf-8">
-  <title>Tiimi</title>
-  <meta content="Tiimi" property="og:title">
-  <meta content="Tiimi" property="twitter:title">
+  <title>Tiimi – Nords Oy</title>
+  <meta content="Tässä tiimissä yhdistyy luovuus, koodi ja hyvä meininki. Tutustu tyyppeihin, jotka tekevät brändisi verkkosivut ja chatbotit totta." name="description">
+  <meta content="Tiimi – Nords Oy" property="og:title">
+  <meta content="Tässä tiimissä yhdistyy luovuus, koodi ja hyvä meininki. Tutustu tyyppeihin, jotka tekevät brändisi verkkosivut ja chatbotit totta." property="og:description">
+  <meta content="Tiimi – Nords Oy" property="twitter:title">
+  <meta content="Tässä tiimissä yhdistyy luovuus, koodi ja hyvä meininki. Tutustu tyyppeihin, jotka tekevät brändisi verkkosivut ja chatbotit totta." property="twitter:description">
+  <meta property="og:type" content="website">
+  <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/components.css" rel="stylesheet" type="text/css">
