--- a/asiakaspalautteet.html
+++ b/asiakaspalautteet.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Thu Dec 18 2025 12:05:23 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Wed Jan 07 2026 07:35:38 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="69404de2308842388ae6b07b" data-wf-site="6934202faf17f8cbbfc79092" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -861,7 +861,9 @@
                           <div class="text-color-inherit">Pauliina Still</div>
                         </div>
                         <div id="w-node-_6bde758c-1e0a-d88a-4200-63c318249e61-18249e5a" class="avatar__company">
-                          <div class="text-color-inherit"></div>
+                          <div class="text-color-inherit">
+                            <a href="https://www.finder.fi/Kauneushoitola/Mondo+Bellezza+&amp;+Benessere+Oy/Helsinki/yhteystiedot/4016067">Mondo Bellezza &amp; Benessere Oy</a>
+                          </div>
                         </div>
                       </div>
                     </div>
