--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Thu Dec 18 2025 12:05:23 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Wed Jan 07 2026 07:35:38 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="69342031af17f8cbbfc79103" data-wf-site="6934202faf17f8cbbfc79092" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -140,14 +140,14 @@
                     <div id="w-node-dd83491a-f040-74b8-47b7-0c0e0a91babf-8494b580" class="hero__wrap">
                       <div id="w-node-e4641a48-7ada-426e-c0d1-0bf78494b587-8494b580" class="hero__header">
                         <div class="hero__heading">
-                          <h1>Me teemme sivut, jotka tukevat kasvua</h1>
+                          <h1>Kotisivut ilman stressiä.</h1>
                         </div>
                       </div>
                       <div id="w-node-e4641a48-7ada-426e-c0d1-0bf78494b58e-8494b580" class="hero__btn w-variant-e4641a48-7ada-426e-c0d1-0bf78494b599">
-                        <a href="ota-yhteytta" data-wf--button---primary-overlay--variant="primary" data-w-id="7f552dd8-6f55-9529-2d4e-a42d88c80ae1" class="btn__component btn--overlay w-inline-block">
+                        <a href="tyot" data-wf--button---primary-overlay--variant="primary" data-w-id="7f552dd8-6f55-9529-2d4e-a42d88c80ae1" class="btn__component btn--overlay w-inline-block">
                           <div class="btn__label-wrap btn--overlay">
-                            <div class="btn__label btn--overlay">Ota yhteyttä</div>
-                            <div class="btn__label--hidden btn--overlay">Ota yhteyttä</div>
+                            <div class="btn__label btn--overlay">Työt</div>
+                            <div class="btn__label--hidden btn--overlay">Työt</div>
                           </div>
                           <div class="btn__icon"><img src="images/valkoinen-nuoli.svg" loading="lazy" alt="Valkoinen nuoli" class="image-4"></div>
                         </a>
@@ -155,14 +155,14 @@
                     </div>
                     <div id="w-node-_78e20ed5-d228-431b-f70c-cbf128248689-8494b580" class="hero__img-wrap width-80"></div>
                   </div>
-                  <div class="hero__bg-wrap bg--fixed"><img src="images/Nuori-mies.jpeg" loading="lazy" alt="Nuori mies istuu nojatuolissa kädessään lasillinen ja sylissään kannettava tietokone, taustalla koristeltu joulukuusi." class="hero__bg-img w-variant-e4641a48-7ada-426e-c0d1-0bf78494b599">
+                  <div class="hero__bg-wrap bg--fixed"><img src="images/aaltoileva-usva.webp" loading="lazy" alt="Himmeässä valaistuksessa sinivihreä aaltoileva usva tai valo tummalla taustalla." sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px" srcset="images/ae12820a913a5c888b8023783f8ccc08_smooth-p-500.webp 500w, images/ae12820a913a5c888b8023783f8ccc08_smooth-p-800.webp 800w, images/ae12820a913a5c888b8023783f8ccc08_smooth-p-1080.webp 1080w, images/ae12820a913a5c888b8023783f8ccc08_smooth-p-1600.webp 1600w, images/aaltoileva-usva.webp 2000w" class="hero__bg-img w-variant-e4641a48-7ada-426e-c0d1-0bf78494b599">
                     <div class="hero__bg-mask"></div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-          <div class="w-layout-blockcontainer container overflow-visible-transparent w-container">
+          <div class="w-layout-blockcontainer container overflow-visible-transparent hide w-container">
             <div data-w-id="170bc9ac-148f-d31e-1e47-08a92f0e6d28" class="marquee-logo__component marquee--to-left">
               <div class="marquee-logo__wrap theme--alternate">
                 <div class="marquee__item">
@@ -204,6 +204,34 @@
       </div>
     </header>
     <main class="main">
+      <section class="section section--no-y-padding">
+        <div class="w-layout-blockcontainer container w-container">
+          <div class="w-layout-grid grid grid--6-col">
+            <div id="w-node-_52d1eb35-d1e0-c7f3-62fd-ddf907c5c35f-bfc79103" class="item">
+              <div class="content__heading tablet-align-center">
+                <h2 class="display-heading--md">Meihin luottaa jo 600+ upeaa suomalaista yritystä</h2>
+              </div>
+            </div>
+            <div id="w-node-aa3d250e-118b-d286-f886-15ee10fef428-bfc79103" class="logo-carousel splide">
+              <div class="splide__track">
+                <div class="splide__list">
+                  <div class="splide__slide"><img loading="lazy" src="images/Asuja_Kiinteistopalvelut.webp" alt="Asuja Kiinteistöpalvelut logo" class="logo"></div>
+                  <div class="splide__slide"><img loading="lazy" src="images/Maakymppi.webp" alt="Maakymppi logo" class="logo"></div>
+                  <div class="splide__slide"><img loading="lazy" src="images/Satama_Bar_Bistro.webp" alt="Satama Bar Bistro" class="logo"></div>
+                  <div class="splide__slide"><img loading="lazy" src="images/La_Reine.webp" alt="La Reine logo" class="logo"></div>
+                  <div class="splide__slide"><img loading="lazy" src="images/Tilintarkastus_Venitar.webp" alt="Tilintarkastus Venitar" class="logo"></div>
+                  <div class="splide__slide"><img loading="lazy" src="images/Softhaven.webp" alt="Softhaven logo" class="logo"></div>
+                  <div class="splide__slide"><img loading="lazy" src="images/SWISSGriP.webp" alt="SWISSGriP logo" class="logo"></div>
+                  <div class="splide__slide"><img loading="lazy" src="images/Lakitoimisto_Pakanen.webp" alt="Lakitoimisto Pakanen" class="logo"></div>
+                  <div class="splide__slide"><img loading="lazy" src="images/Viitarak-logo.webp" alt="Viitarak logo" class="logo"></div>
+                  <div class="splide__slide"><img loading="lazy" src="images/elainsairaala-sacrum.webp" alt="Eläinsairala Sacrum -logo" class="logo"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <div class="divider"></div>
       <div id="about" class="about">
         <section class="section">
           <div data-wf--background---shape--variant="primary" class="bg-shape__component">
@@ -1815,7 +1843,7 @@
                           </div>
                         </div>
                         <div class="team__btn">
-                          <a aria-label="linkedin" href="https://www.credly.com/badges/a31af7f6-a62c-4fb6-8936-0ef50fc867ac/email" target="_blank" class="w-inline-block"><img src="images/google-cybersecurity-certificate.webp" loading="lazy" alt="Google Cybersecurity -sertifikaatti Courseran suorittamasta kurssista." sizes="(max-width: 767px) 100vw, 504px" srcset="images/d6073c32ae2e346412f88381856825c5_google-cybersecurity-certificate-p-500.webp 500w, images/google-cybersecurity-certificate.webp 504w" class="google-cert w-variant-fa53e771-1857-f129-ee52-acfa1771d891"></a>
+                          <a aria-label="linkedin" href="https://www.credly.com/badges/a31af7f6-a62c-4fb6-8936-0ef50fc867ac/email" target="_blank" class="w-inline-block"><img src="images/google-cybersecurity-certificate.webp" loading="lazy" alt="Google Cybersecurity -sertifikaatti Courseran suorittamasta kurssista." sizes="(max-width: 767px) 100vw, (max-width: 991px) 727.9921875px, 939.9921875px" srcset="images/d6073c32ae2e346412f88381856825c5_google-cybersecurity-certificate-p-500.webp 500w, images/google-cybersecurity-certificate.webp 504w" class="google-cert w-variant-fa53e771-1857-f129-ee52-acfa1771d891"></a>
                         </div>
                       </div>
                     </div>
@@ -1835,7 +1863,7 @@
                           </div>
                         </div>
                         <div class="team__btn">
-                          <a aria-label="linkedin" href="https://www.credly.com/badges/329a074b-725a-4dae-833a-197889699533/public_url" target="_blank" class="w-inline-block"><img src="images/google-digital-marketing-and-e-commerce-professiona.webp" loading="lazy" alt="" sizes="(max-width: 767px) 100vw, 504px" srcset="images/google-digital-marketing-and-e-commerce-professiona-p-500.webp 500w, images/google-digital-marketing-and-e-commerce-professiona-p-800.webp 800w, images/google-digital-marketing-and-e-commerce-professiona.webp 952w" class="google-cert w-variant-fa53e771-1857-f129-ee52-acfa1771d891"></a>
+                          <a aria-label="linkedin" href="https://www.credly.com/badges/329a074b-725a-4dae-833a-197889699533/public_url" target="_blank" class="w-inline-block"><img src="images/google-digital-marketing-and-e-commerce-professiona.webp" loading="lazy" alt="" sizes="(max-width: 767px) 100vw, (max-width: 991px) 727.9921875px, 939.9921875px" srcset="images/google-digital-marketing-and-e-commerce-professiona-p-500.webp 500w, images/google-digital-marketing-and-e-commerce-professiona-p-800.webp 800w, images/google-digital-marketing-and-e-commerce-professiona.webp 952w" class="google-cert w-variant-fa53e771-1857-f129-ee52-acfa1771d891"></a>
                         </div>
                       </div>
                     </div>
@@ -2394,11 +2422,14 @@
         <div class="hover-cursor__icon"><img src="images/nuoli-ylos.svg" loading="lazy" alt="Nuoli ylös" class="image-7"></div>
       </div>
     </div>
-    <div data-wf--loader---global--variant="primary" class="loader"></div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6934202faf17f8cbbfc79092" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/nords-new.js" type="text/javascript"></script><!--  Elfsight AI Chatbot | Untitled AI Chatbot  -->
   <script src="https://static.elfsight.com/platform/platform.js" async=""></script>
-  <div class="elfsight-app-8710a1d1-348c-4159-a2be-20e841fb548b" data-elfsight-app-lazy=""></div>
+  <div class="elfsight-app-8710a1d1-348c-4159-a2be-20e841fb548b" data-elfsight-app-lazy=""></div><!--  Splide Slider  -->
+  <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide-extension-auto-scroll@0.5.3/dist/js/splide-extension-auto-scroll.min.js"></script>
+  <script>new Splide(".logo-carousel",{perPage:9,type:"loop",pagination:!1,arrows:!1,drag:!1,autoWidth:!0,autoHeight:!0,autoScroll:{speed:0.4,pauseOnHover:!1}}).mount(window.splide.Extensions);</script>
 </body>
 </html>
