--- a/julkaisut/case-paikallinen-autokorjaamo-limingan-alueelta.html
+++ b/julkaisut/case-paikallinen-autokorjaamo-limingan-alueelta.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Wed Jan 07 2026 17:52:41 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Fri Jan 09 2026 08:09:52 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="695e95c5c649e7805812e3a7" data-wf-site="6934202faf17f8cbbfc79092" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -17,6 +17,8 @@
   <link href="../images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="../images/webclip.png" rel="apple-touch-icon">
   <link href="https://www.nords.fi/julkaisut/case-paikallinen-autokorjaamo-limingan-alueelta" rel="canonical">
+  <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-PSLMFQDWYR"></script>
+  <script type="text/javascript">window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('set', 'developer_id.dZGVlNj', true);gtag('js', new Date());gtag('config', 'G-PSLMFQDWYR');</script>
   <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="70a813b3-3f24-4230-9fe4-da57fb9a6f73" data-blockingmode="auto" type="text/javascript"></script>
 </head>
 <body>
@@ -142,7 +144,7 @@
                     <div id="w-node-_78e20ed5-d228-431b-f70c-cbf128248689-8494b580" class="hero__img-wrap width-80">
                       <div class="hero__img-slot">
                         <div data-wf--image---main--variant="auto" class="img__component">
-                          <div class="img__img-main"><img src="../images/ajtek.webp" loading="lazy" alt="" sizes="(max-width: 767px) 100vw, (max-width: 991px) 727.9921875px, 939.984375px" srcset="../images/ajtek.webp 500w, ../images/ajtek.webp 800w, ../images/ajtek.webp 1080w, ../images/ajtek.webp 1600w, ../images/ajtek.webp 2000w, ../images/ajtek.webp 2600w, ../images/ajtek.webp 3000w"></div>
+                          <div class="img__img-main"><img src="../images/ajtek.webp" loading="lazy" alt="" sizes="(max-width: 767px) 100vw, (max-width: 991px) 727.9921875px, 939.984375px" srcset="../images/ajtek-p-500.webp 500w, ../images/ajtek-p-800.webp 800w, ../images/ajtek-p-1080.webp 1080w, ../images/ajtek-p-1600.webp 1600w, ../images/ajtek-p-2000.webp 2000w, ../images/ajtek-p-2600.webp 2600w, ../images/ajtek.webp 3000w"></div>
                         </div>
                       </div>
                     </div>
