--- a/401.html
+++ b/401.html
@@ -1,17 +1,8 @@
-<!DOCTYPE html><!--  Last Published: Fri Jan 09 2026 08:09:52 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Thu Jan 15 2026 13:18:16 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="69342031af17f8cbbfc79270" data-wf-site="6934202faf17f8cbbfc79092" lang="fi">
 <head>
   <meta charset="utf-8">
-  <title>Login | Sensa - Webflow HTML website template</title>
-  <meta content="Build fast and scalable SaaS websites with Sensa — a clean, modular Webflow template made for startups and digital services. Design by StaticMotion." name="description">
-  <meta content="Login | Sensa - Webflow HTML website template" property="og:title">
-  <meta content="Sensa is a modern Webflow template built for SaaS startups, digital products, and tech services. Fully responsive, CMS-powered, and optimized for performance and SEO. Design by StaticMotion." property="og:description">
-  <meta content="https://cdn.prod.website-files.com/682acbc453e470edcc5fb9ab/682ae06bee4c7f2d38a555ec_OG.avif" property="og:image">
-  <meta content="Login | Sensa - Webflow HTML website template" property="twitter:title">
-  <meta content="Sensa is a modern Webflow template built for SaaS startups, digital products, and tech services. Fully responsive, CMS-powered, and optimized for performance and SEO. Design by StaticMotion." property="twitter:description">
-  <meta content="https://cdn.prod.website-files.com/682acbc453e470edcc5fb9ab/682ae06bee4c7f2d38a555ec_OG.avif" property="twitter:image">
-  <meta property="og:type" content="website">
-  <meta content="summary_large_image" name="twitter:card">
+  <title>Nords Oy</title>
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/components.css" rel="stylesheet" type="text/css">
