--- a/404.html
+++ b/404.html
@@ -1,17 +1,8 @@
-<!DOCTYPE html><!--  Last Published: Fri Jan 09 2026 08:09:52 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Thu Jan 15 2026 13:18:16 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="69342031af17f8cbbfc79271" data-wf-site="6934202faf17f8cbbfc79092" lang="fi">
 <head>
   <meta charset="utf-8">
-  <title>404 | Sensa - Webflow HTML website template</title>
-  <meta content="Build fast and scalable SaaS websites with Sensa — a clean, modular Webflow template made for startups and digital services. Design by StaticMotion." name="description">
-  <meta content="404 | Sensa - Webflow HTML website template" property="og:title">
-  <meta content="Sensa is a modern Webflow template built for SaaS startups, digital products, and tech services. Fully responsive, CMS-powered, and optimized for performance and SEO. Design by StaticMotion." property="og:description">
-  <meta content="https://cdn.prod.website-files.com/682acbc453e470edcc5fb9ab/682ae06bee4c7f2d38a555ec_OG.avif" property="og:image">
-  <meta content="404 | Sensa - Webflow HTML website template" property="twitter:title">
-  <meta content="Sensa is a modern Webflow template built for SaaS startups, digital products, and tech services. Fully responsive, CMS-powered, and optimized for performance and SEO. Design by StaticMotion." property="twitter:description">
-  <meta content="https://cdn.prod.website-files.com/682acbc453e470edcc5fb9ab/682ae06bee4c7f2d38a555ec_OG.avif" property="twitter:image">
-  <meta property="og:type" content="website">
-  <meta content="summary_large_image" name="twitter:card">
+  <title>Nords Oy</title>
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/components.css" rel="stylesheet" type="text/css">
@@ -147,14 +138,14 @@
                           <h1>404</h1>
                         </div>
                         <div class="hero__subheading align-center">
-                          <p class="display-body--lg text-color--primary">Page not found</p>
+                          <p class="display-body--lg text-color--primary">Sivua ei löytynyt</p>
                         </div>
                       </div>
                       <div id="w-node-_667ad72d-fcc0-32d8-3277-a3be5e8f39bd-5e8f39b3" class="hero__btn align-center">
                         <a href="https://www.nords.fi" data-wf--button---secondary--variant="primary" data-w-id="2b168537-cca3-2386-569d-6c2cf43f0220" class="btn__component btn--secondary w-inline-block">
                           <div class="btn__label-wrap btn--secondary">
-                            <div class="btn__label btn--secondary">Go to home page</div>
-                            <div class="btn__label--hidden btn--secondary">Go to home page</div>
+                            <div class="btn__label btn--secondary">Takaisin etusivulle</div>
+                            <div class="btn__label--hidden btn--secondary">Takaisin etusivulle</div>
                           </div>
                           <div class="btn__icon"><img src="images/nuoli.svg" loading="lazy" alt="Nuoli" class="image-8"></div>
                         </a>
@@ -495,13 +486,6 @@
             </div>
           </div>
         </aside>
-        <div class="info-btn__component">
-          <a href="https://webflow.com/templates/designers/staticmotion" target="_blank" class="btn__component btn--info w-inline-block">
-            <div class="btn__label-wrap overflow-visible">
-              <div class="btn__label">Explore pages</div>
-            </div>
-          </a>
-        </div>
       </div>
     </div>
     <footer class="footer">
@@ -683,6 +667,7 @@
         <div class="hover-cursor__icon"><img src="images/nuoli-ylos.svg" loading="lazy" alt="Nuoli ylös" class="image-7"></div>
       </div>
     </div>
+    <div></div>
     <div data-wf--loader---global--variant="primary" class="loader"></div>
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=6934202faf17f8cbbfc79092" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
