Update new works item

--- a/tyot.html
+++ b/tyot.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Thu Jan 15 2026 13:18:16 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sat Jan 17 2026 15:07:38 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="69342031af17f8cbbfc791d6" data-wf-site="6934202faf17f8cbbfc79092" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -332,14 +332,14 @@
                   <div class="tab__list">
                     <div class="tab__body">
                       <div class="tab__wrap">
-                        <a href="https://www.mrcardetailing.fi/" target="_blank" class="tab__link-block w-inline-block">
+                        <a href="https://skantti.fi/" target="_blank" class="tab__link-block w-inline-block">
                           <div id="w-node-cba2f3fb-a9c2-5552-c9fe-df3baf7ff66d-af7ff66d" data-wf--story---global--variant="alternate" data-w-id="cba2f3fb-a9c2-5552-c9fe-df3baf7ff66d" class="story__component w-variant-776b48b3-ed80-87d6-4e90-30f7e8ddc7b3">
                             <div class="story__content">
                               <div class="story__overline">
                                 <div class="story__badge w-variant-776b48b3-ed80-87d6-4e90-30f7e8ddc7b3">
                                   <div data-wf--badge---global--variant="brand" class="badge__component w-variant-53647392-9f54-66f1-2941-8c5fd74e275a">
                                     <div class="badge__label">
-                                      <div>2023</div>
+                                      <div>2025</div>
                                     </div>
                                   </div>
                                 </div>
@@ -349,11 +349,11 @@
                               </div>
                               <div class="story__header">
                                 <div class="story__heading">
-                                  <h3 class="display-heading--lg">Mr Car Detailing Oy</h3>
+                                  <h3 class="display-heading--lg">Skantti Oy</h3>
                                 </div>
                               </div>
                             </div>
-                            <div class="story__img-wrap"><img loading="lazy" src="images/mrcardetailing.webp" alt="MR Car Detailing -verkkosivun etusivu, jossa esitellään laadukkaita autonhoitopalveluja, kokemuksia ja palveluita kuvin ja tekstein.">
+                            <div class="story__img-wrap"><img loading="lazy" src="images/skantti.webp" alt="Skantti Oy:n verkkosivut">
                               <div class="story__img-mask w-variant-776b48b3-ed80-87d6-4e90-30f7e8ddc7b3"></div>
                             </div>
                           </div>
@@ -390,6 +390,42 @@
                               </div>
                             </div>
                             <div class="story__img-wrap"><img loading="lazy" src="images/vrum.webp" alt="Vrum Vrum -autovuokraamon verkkosivun etusivu, jossa valitaan auto vuokrattavaksi ja esitellään nelivaiheinen vuokrausprosessi sekä viisi pakettiautoa hinnastoineen.">
+                              <div class="story__img-mask w-variant-776b48b3-ed80-87d6-4e90-30f7e8ddc7b3"></div>
+                            </div>
+                          </div>
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div id="w-node-_71bf4c30-ec27-c681-c437-47b104edfd83-bfc791d6" class="item">
+                <div class="tab__collection">
+                  <div class="tab__list">
+                    <div class="tab__body">
+                      <div class="tab__wrap">
+                        <a href="https://www.mrcardetailing.fi/" target="_blank" class="tab__link-block w-inline-block">
+                          <div id="w-node-cba2f3fb-a9c2-5552-c9fe-df3baf7ff66d-af7ff66d" data-wf--story---global--variant="alternate" data-w-id="cba2f3fb-a9c2-5552-c9fe-df3baf7ff66d" class="story__component w-variant-776b48b3-ed80-87d6-4e90-30f7e8ddc7b3">
+                            <div class="story__content">
+                              <div class="story__overline">
+                                <div class="story__badge w-variant-776b48b3-ed80-87d6-4e90-30f7e8ddc7b3">
+                                  <div data-wf--badge---global--variant="brand" class="badge__component w-variant-53647392-9f54-66f1-2941-8c5fd74e275a">
+                                    <div class="badge__label">
+                                      <div>2023</div>
+                                    </div>
+                                  </div>
+                                </div>
+                                <div class="story__btn">
+                                  <div class="btn__component btn--icon-overlay"><img src="images/nuoli-ylos.svg" loading="lazy" alt="Nuoli ylös" class="arrow-icon-mobile w-variant-776b48b3-ed80-87d6-4e90-30f7e8ddc7b3"></div>
+                                </div>
+                              </div>
+                              <div class="story__header">
+                                <div class="story__heading">
+                                  <h3 class="display-heading--lg">Mr Car Detailing Oy</h3>
+                                </div>
+                              </div>
+                            </div>
+                            <div class="story__img-wrap"><img loading="lazy" src="images/mrcardetailing.webp" alt="MR Car Detailing -verkkosivun etusivu, jossa esitellään laadukkaita autonhoitopalveluja, kokemuksia ja palveluita kuvin ja tekstein.">
                               <div class="story__img-mask w-variant-776b48b3-ed80-87d6-4e90-30f7e8ddc7b3"></div>
                             </div>
                           </div>
