--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Thu Jan 15 2026 13:18:16 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sat Jan 17 2026 15:07:38 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="69342031af17f8cbbfc79103" data-wf-site="6934202faf17f8cbbfc79092" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -826,6 +826,42 @@
                   </div>
                 </div>
               </div>
+              <div id="w-node-caf81fd6-abcc-e8c3-483a-cb3bbe6f480d-bfc79103" class="item">
+                <div class="tab__collection">
+                  <div class="tab__list">
+                    <div class="tab__body">
+                      <div class="tab__wrap">
+                        <a href="https://skantti.fi/" target="_blank" class="tab__link-block w-inline-block">
+                          <div id="w-node-cba2f3fb-a9c2-5552-c9fe-df3baf7ff66d-af7ff66d" data-wf--story---global--variant="alternate" data-w-id="cba2f3fb-a9c2-5552-c9fe-df3baf7ff66d" class="story__component w-variant-776b48b3-ed80-87d6-4e90-30f7e8ddc7b3">
+                            <div class="story__content">
+                              <div class="story__overline">
+                                <div class="story__badge w-variant-776b48b3-ed80-87d6-4e90-30f7e8ddc7b3">
+                                  <div data-wf--badge---global--variant="brand" class="badge__component w-variant-53647392-9f54-66f1-2941-8c5fd74e275a">
+                                    <div class="badge__label">
+                                      <div>2025</div>
+                                    </div>
+                                  </div>
+                                </div>
+                                <div class="story__btn">
+                                  <div class="btn__component btn--icon-overlay"><img src="images/nuoli-ylos.svg" loading="lazy" alt="Nuoli ylös" class="arrow-icon-mobile w-variant-776b48b3-ed80-87d6-4e90-30f7e8ddc7b3"></div>
+                                </div>
+                              </div>
+                              <div class="story__header">
+                                <div class="story__heading">
+                                  <h3 class="display-heading--lg">Skantti Oy</h3>
+                                </div>
+                              </div>
+                            </div>
+                            <div class="story__img-wrap"><img loading="lazy" src="images/skantti.webp" alt="Skantti Oy:n verkkosivut">
+                              <div class="story__img-mask w-variant-776b48b3-ed80-87d6-4e90-30f7e8ddc7b3"></div>
+                            </div>
+                          </div>
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
               <div id="w-node-_8f3ad680-9334-709d-e5c0-d974c12f751b-bfc79103" class="item">
                 <div class="tab__collection">
                   <div class="tab__list">
@@ -853,42 +889,6 @@
                               </div>
                             </div>
                             <div class="story__img-wrap"><img loading="lazy" src="images/finspro.webp" alt="FinsPro-sivusto, jossa näkyy rakennustyömaa ja eristystyöhön liittyvää tekstiä sekä FinsPro-muki ja logo.">
-                              <div class="story__img-mask w-variant-776b48b3-ed80-87d6-4e90-30f7e8ddc7b3"></div>
-                            </div>
-                          </div>
-                        </a>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div id="w-node-fd3fec68-5eb5-1a48-150f-94967f6aef9b-bfc79103" class="item">
-                <div class="tab__collection">
-                  <div class="tab__list">
-                    <div class="tab__body">
-                      <div class="tab__wrap">
-                        <a href="https://www.mrcardetailing.fi/" target="_blank" class="tab__link-block w-inline-block">
-                          <div id="w-node-cba2f3fb-a9c2-5552-c9fe-df3baf7ff66d-af7ff66d" data-wf--story---global--variant="alternate" data-w-id="cba2f3fb-a9c2-5552-c9fe-df3baf7ff66d" class="story__component w-variant-776b48b3-ed80-87d6-4e90-30f7e8ddc7b3">
-                            <div class="story__content">
-                              <div class="story__overline">
-                                <div class="story__badge w-variant-776b48b3-ed80-87d6-4e90-30f7e8ddc7b3">
-                                  <div data-wf--badge---global--variant="brand" class="badge__component w-variant-53647392-9f54-66f1-2941-8c5fd74e275a">
-                                    <div class="badge__label">
-                                      <div>2023</div>
-                                    </div>
-                                  </div>
-                                </div>
-                                <div class="story__btn">
-                                  <div class="btn__component btn--icon-overlay"><img src="images/nuoli-ylos.svg" loading="lazy" alt="Nuoli ylös" class="arrow-icon-mobile w-variant-776b48b3-ed80-87d6-4e90-30f7e8ddc7b3"></div>
-                                </div>
-                              </div>
-                              <div class="story__header">
-                                <div class="story__heading">
-                                  <h3 class="display-heading--lg">Mr Car Detailing Oy</h3>
-                                </div>
-                              </div>
-                            </div>
-                            <div class="story__img-wrap"><img loading="lazy" src="images/mrcardetailing.webp" alt="MR Car Detailing -verkkosivun etusivu, jossa esitellään laadukkaita autonhoitopalveluja, kokemuksia ja palveluita kuvin ja tekstein.">
                               <div class="story__img-mask w-variant-776b48b3-ed80-87d6-4e90-30f7e8ddc7b3"></div>
                             </div>
                           </div>
@@ -1845,7 +1845,7 @@
                           </div>
                         </div>
                         <div class="team__btn">
-                          <a aria-label="linkedin" href="https://www.credly.com/badges/a31af7f6-a62c-4fb6-8936-0ef50fc867ac/email" target="_blank" class="w-inline-block"><img src="images/google-cybersecurity-certificate.webp" loading="lazy" alt="Google Cybersecurity -sertifikaatti Courseran suorittamasta kurssista." sizes="100vw" srcset="images/d6073c32ae2e346412f88381856825c5_google-cybersecurity-certificate-p-500.webp 500w, images/google-cybersecurity-certificate.webp 504w" class="google-cert w-variant-fa53e771-1857-f129-ee52-acfa1771d891"></a>
+                          <a aria-label="linkedin" href="https://www.credly.com/badges/a31af7f6-a62c-4fb6-8936-0ef50fc867ac/email" target="_blank" class="w-inline-block"><img src="images/google-cybersecurity-certificate.webp" loading="lazy" alt="Google Cybersecurity -sertifikaatti Courseran suorittamasta kurssista." sizes="(max-width: 767px) 100vw, (max-width: 991px) 727.9921875px, 939.9921875px" srcset="images/d6073c32ae2e346412f88381856825c5_google-cybersecurity-certificate-p-500.webp 500w, images/google-cybersecurity-certificate.webp 504w" class="google-cert w-variant-fa53e771-1857-f129-ee52-acfa1771d891"></a>
                         </div>
                       </div>
                     </div>
@@ -1865,7 +1865,7 @@
                           </div>
                         </div>
                         <div class="team__btn">
-                          <a aria-label="linkedin" href="https://www.credly.com/badges/329a074b-725a-4dae-833a-197889699533/public_url" target="_blank" class="w-inline-block"><img src="images/google-digital-marketing-and-e-commerce-professiona.webp" loading="lazy" alt="" sizes="100vw" srcset="images/google-digital-marketing-and-e-commerce-professiona-p-500.webp 500w, images/google-digital-marketing-and-e-commerce-professiona-p-800.webp 800w, images/google-digital-marketing-and-e-commerce-professiona.webp 952w" class="google-cert w-variant-fa53e771-1857-f129-ee52-acfa1771d891"></a>
+                          <a aria-label="linkedin" href="https://www.credly.com/badges/329a074b-725a-4dae-833a-197889699533/public_url" target="_blank" class="w-inline-block"><img src="images/google-digital-marketing-and-e-commerce-professiona.webp" loading="lazy" alt="" sizes="(max-width: 767px) 100vw, (max-width: 991px) 727.9921875px, 939.9921875px" srcset="images/google-digital-marketing-and-e-commerce-professiona-p-500.webp 500w, images/google-digital-marketing-and-e-commerce-professiona-p-800.webp 800w, images/google-digital-marketing-and-e-commerce-professiona.webp 952w" class="google-cert w-variant-fa53e771-1857-f129-ee52-acfa1771d891"></a>
                         </div>
                       </div>
                     </div>
