Update cookie banner

--- a/asiakaspalautteet.html
+++ b/asiakaspalautteet.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sat Jan 17 2026 15:07:38 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Mon Jan 19 2026 06:38:32 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="69404de2308842388ae6b07b" data-wf-site="6934202faf17f8cbbfc79092" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -24,7 +24,7 @@
   <link href="https://www.nords.fi/asiakaspalautteet" rel="canonical">
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-PSLMFQDWYR"></script>
   <script type="text/javascript">window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('set', 'developer_id.dZGVlNj', true);gtag('js', new Date());gtag('config', 'G-PSLMFQDWYR');</script>
-  <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="70a813b3-3f24-4230-9fe4-da57fb9a6f73" data-blockingmode="auto" type="text/javascript"></script>
+  <script id="cookieyes" type="text/javascript" src="https://cdn-cookieyes.com/client_data/f557970aa6657a0fe90ce9d00f09df57/script.js"></script>
 </head>
 <body>
   <div id="back-to-top" class="page">
