Update live chat animation

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Jan 19 2026 06:38:32 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Mon Jan 19 2026 12:15:41 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="69342031af17f8cbbfc79103" data-wf-site="6934202faf17f8cbbfc79092" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -211,7 +211,7 @@
           <div class="w-layout-grid grid grid--6-col">
             <div id="w-node-_52d1eb35-d1e0-c7f3-62fd-ddf907c5c35f-bfc79103" class="item">
               <div class="content__heading tablet-align-center">
-                <h2 class="display-heading--md">Meihin luottaa jo 600+ upea suomalaista yritystä</h2>
+                <h2 class="display-heading--md margin-bottom-mobile">Meihin luottaa jo 600+ upea suomalaista yritystä</h2>
               </div>
             </div>
             <div id="w-node-aa3d250e-118b-d286-f886-15ee10fef428-bfc79103" class="logo-carousel splide">
