Update new project

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Jan 19 2026 13:43:25 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Tue Jan 20 2026 06:49:31 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="69342031af17f8cbbfc79103" data-wf-site="6934202faf17f8cbbfc79092" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -226,7 +226,7 @@
                   <div class="splide__slide"><img loading="lazy" src="images/SWISSGriP.webp" alt="SWISSGriP logo" class="logo"></div>
                   <div class="splide__slide"><img loading="lazy" src="images/Lakitoimisto_Pakanen.webp" alt="Lakitoimisto Pakanen" class="logo"></div>
                   <div class="splide__slide"><img loading="lazy" src="images/Viitarak-logo.webp" alt="Viitarak logo" class="logo"></div>
-                  <div class="splide__slide"><img sizes="(max-width: 767px) 100vw, (max-width: 991px) 727.984375px, 939.9765625px" srcset="images/image-p-500.webp 500w, images/image-p-800.webp 800w, images/image-p-1080.webp 1080w, images/elainsairaala-sacrum.webp 1794w" alt="Eläinsairala Sacrum -logo" src="images/elainsairaala-sacrum.webp" loading="lazy" class="logo"></div>
+                  <div class="splide__slide"><img sizes="100vw" srcset="images/image-p-500.webp 500w, images/image-p-800.webp 800w, images/image-p-1080.webp 1080w, images/elainsairaala-sacrum.webp 1794w" alt="Eläinsairala Sacrum -logo" src="images/elainsairaala-sacrum.webp" loading="lazy" class="logo"></div>
                 </div>
               </div>
             </div>
