--- a/tyot.html
+++ b/tyot.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Jan 19 2026 13:43:25 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Tue Jan 20 2026 06:49:31 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="69342031af17f8cbbfc791d6" data-wf-site="6934202faf17f8cbbfc79092" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -328,6 +328,42 @@
                 </div>
               </div>
               <div id="w-node-d8ac05f2-31bb-1f6a-ec02-f387548806a0-bfc791d6" class="item">
+                <div class="tab__collection">
+                  <div class="tab__list">
+                    <div class="tab__body">
+                      <div class="tab__wrap">
+                        <a href="https://www.hecover.com/" target="_blank" class="tab__link-block w-inline-block">
+                          <div id="w-node-cba2f3fb-a9c2-5552-c9fe-df3baf7ff66d-af7ff66d" data-wf--story---global--variant="alternate" data-w-id="cba2f3fb-a9c2-5552-c9fe-df3baf7ff66d" class="story__component w-variant-776b48b3-ed80-87d6-4e90-30f7e8ddc7b3">
+                            <div class="story__content">
+                              <div class="story__overline">
+                                <div class="story__badge w-variant-776b48b3-ed80-87d6-4e90-30f7e8ddc7b3">
+                                  <div data-wf--badge---global--variant="brand" class="badge__component w-variant-53647392-9f54-66f1-2941-8c5fd74e275a">
+                                    <div class="badge__label">
+                                      <div>2026</div>
+                                    </div>
+                                  </div>
+                                </div>
+                                <div class="story__btn">
+                                  <div class="btn__component btn--icon-overlay"><img src="images/nuoli-ylos.svg" loading="lazy" alt="Nuoli ylös" class="arrow-icon-mobile w-variant-776b48b3-ed80-87d6-4e90-30f7e8ddc7b3"></div>
+                                </div>
+                              </div>
+                              <div class="story__header">
+                                <div class="story__heading">
+                                  <h3 class="display-heading--lg">Heco-Parts Oy</h3>
+                                </div>
+                              </div>
+                            </div>
+                            <div class="story__img-wrap"><img loading="lazy" src="images/hecover.webp" alt="Hecover verkkosivut">
+                              <div class="story__img-mask w-variant-776b48b3-ed80-87d6-4e90-30f7e8ddc7b3"></div>
+                            </div>
+                          </div>
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div id="w-node-_2b9ce2f7-8c8d-a1ac-53e4-123e068c1779-bfc791d6" class="item">
                 <div class="tab__collection">
                   <div class="tab__list">
                     <div class="tab__body">
