--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sun Feb 01 2026 15:58:49 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Fri Feb 06 2026 09:30:22 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="69342031af17f8cbbfc79103" data-wf-site="6934202faf17f8cbbfc79092" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -227,7 +227,7 @@
                   <div class="splide__slide"><img loading="lazy" src="images/SWISSGriP.webp" alt="SWISSGriP logo" class="logo"></div>
                   <div class="splide__slide"><img loading="lazy" src="images/Lakitoimisto_Pakanen.webp" alt="Lakitoimisto Pakanen" class="logo"></div>
                   <div class="splide__slide"><img loading="lazy" src="images/Viitarak-logo.webp" alt="Viitarak logo" class="logo"></div>
-                  <div class="splide__slide"><img sizes="(max-width: 767px) 100vw, (max-width: 991px) 728px, 940px" srcset="images/image-p-500.webp 500w, images/image-p-800.webp 800w, images/image-p-1080.webp 1080w, images/elainsairaala-sacrum.webp 1794w" alt="Eläinsairala Sacrum -logo" src="images/elainsairaala-sacrum.webp" loading="lazy" class="logo"></div>
+                  <div class="splide__slide"><img loading="lazy" src="images/elainsairaala-sacrum.webp" alt="Eläinsairala Sacrum -logo" class="logo"></div>
                 </div>
               </div>
             </div>
@@ -1501,6 +1501,30 @@
                                 </div>
                                 <div id="w-node-_6bde758c-1e0a-d88a-4200-63c318249e61-18249e5a" class="avatar__company">
                                   <div class="text-color-inherit">Rakennuspalvelu Viljanen Oy</div>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div data-w-id="46959212-1462-c0d9-8817-7bd5d33de67e" class="slide-1 w-slide">
+                      <div data-wf--testimonial---global--variant="primary" class="testimonial__component">
+                        <div class="testimonial__wrap">
+                          <div class="testimonial__content">
+                            <div class="testimonial__quote">
+                              <p class="display-body--lg">&quot;&quot;Kotisivujen rakentaminen meni veljeksiltä todella hyvin ja nopealla aikataululla, olen enemmän kuin tyytyväinen kokonaisuuteen😊, suosittelen lämpimästi muillekin palvelua tarvitseville👍&quot;&quot;</p>
+                            </div>
+                          </div>
+                          <div class="testimonial__avatar">
+                            <div data-wf--avatar---global--variant="primary" class="avatar__component">
+                              <div id="w-node-eff9879d-5adb-a1e9-3bab-e88007b9e947-18249e5a" class="avatar__divider"></div>
+                              <div id="w-node-_6bde758c-1e0a-d88a-4200-63c318249e5d-18249e5a" class="avatar__content">
+                                <div class="avatar__name">
+                                  <div class="text-color-inherit">Markku Lehtinen</div>
+                                </div>
+                                <div id="w-node-_6bde758c-1e0a-d88a-4200-63c318249e61-18249e5a" class="avatar__company">
+                                  <div class="text-color-inherit">Rapat Oy</div>
                                 </div>
                               </div>
                             </div>
