--- a/asiakaspalautteet.html
+++ b/asiakaspalautteet.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sun Feb 01 2026 15:58:49 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Fri Feb 06 2026 09:30:22 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="69404de2308842388ae6b07b" data-wf-site="6934202faf17f8cbbfc79092" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -256,6 +256,28 @@
                 <div class="testimonial__wrap">
                   <div class="testimonial__content">
                     <div class="testimonial__quote">
+                      <p class="display-body--lg">&quot;Kotisivujen rakentaminen meni veljeksiltä todella hyvin ja nopealla aikataululla, olen enemmän kuin tyytyväinen kokonaisuuteen😊, suosittelen lämpimästi muillekin palvelua tarvitseville👍&quot;</p>
+                    </div>
+                  </div>
+                  <div class="testimonial__avatar">
+                    <div data-wf--avatar---global--variant="primary" class="avatar__component">
+                      <div id="w-node-eff9879d-5adb-a1e9-3bab-e88007b9e947-18249e5a" class="avatar__divider"></div>
+                      <div id="w-node-_6bde758c-1e0a-d88a-4200-63c318249e5d-18249e5a" class="avatar__content">
+                        <div class="avatar__name">
+                          <div class="text-color-inherit">Markku Lehtinen</div>
+                        </div>
+                        <div id="w-node-_6bde758c-1e0a-d88a-4200-63c318249e61-18249e5a" class="avatar__company">
+                          <div class="text-color-inherit">Rapat Oy</div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div data-wf--testimonial---global--variant="primary" class="testimonial__component">
+                <div class="testimonial__wrap">
+                  <div class="testimonial__content">
+                    <div class="testimonial__quote">
                       <p class="display-body--lg">&quot;Oikein ystävällinen ja nopea palvelu. Nettisivut ovat hyvin rakennettu sekä visuaalisesti miellyttävät silmää. Hinta/laatusuhde erittäin hyvä!&quot;</p>
                     </div>
                   </div>
@@ -312,6 +334,28 @@
                         </div>
                         <div id="w-node-_6bde758c-1e0a-d88a-4200-63c318249e61-18249e5a" class="avatar__company">
                           <div class="text-color-inherit">Pirkan Sähköurakointi Oy</div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div data-wf--testimonial---global--variant="primary" class="testimonial__component">
+                <div class="testimonial__wrap">
+                  <div class="testimonial__content">
+                    <div class="testimonial__quote">
+                      <p class="display-body--lg">&quot;Hyvä asiakaspalvelu. Nopeasti halutunlainen verkkosivusto kasaan, suosittelen lämpimästi.&quot;</p>
+                    </div>
+                  </div>
+                  <div class="testimonial__avatar">
+                    <div data-wf--avatar---global--variant="primary" class="avatar__component">
+                      <div id="w-node-eff9879d-5adb-a1e9-3bab-e88007b9e947-18249e5a" class="avatar__divider"></div>
+                      <div id="w-node-_6bde758c-1e0a-d88a-4200-63c318249e5d-18249e5a" class="avatar__content">
+                        <div class="avatar__name">
+                          <div class="text-color-inherit">Veli-Matti Nousiainen</div>
+                        </div>
+                        <div id="w-node-_6bde758c-1e0a-d88a-4200-63c318249e61-18249e5a" class="avatar__company">
+                          <div class="text-color-inherit">Jolly Reds BBQ</div>
                         </div>
                       </div>
                     </div>
